# simple_unicode_normalization_forms

./: Cargo.toml
.github/workflows/: CI.yml
src/: emoji.rs  lib.rs
