[package]
name = "simple_unicode_normalization_forms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "simple_unicode_normalization_forms"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
unicode-normalization = "0.1.23"

[target.aarch64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]
